Fixed the overflow bug more efficiently

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -12,7 +12,7 @@ body {
   font-weight: 400;
   line-height: 1.172;
   margin: 0;
-  overflow-x: hidden;
+  // overflow-x: hidden;
 
   @media screen and (min-width: $bp-mobile) {
     line-height: 1.5;
