--- a/scss/layouts/_mobile-menu.scss
+++ b/scss/layouts/_mobile-menu.scss
@@ -9,6 +9,10 @@
   transform: translateX(100%);
   transition: transform 0.3s;
 
+  @media screen and (min-width: $bp-desktop) {
+    display: none;
+  }
+
   &.is-open {
     transform: translateX(0);
   }
